Register vanilla game events via Spring